2.0.2
- Fix .dat file that gets deleted after multiple component changes on Windows.
- Fix maintenance tool upgrade on OS X.
- Unify selection of language for translations. (QTIFW-390)
- Fix return value of component.installAction() when updating. (QTIFW-727)
- Documentation updates.

2.0.1
- Do not throw exception on empty translation files.
- Fix --checkupdates mode.
- Prevent disabled component to be selected using the Select All button. (QTIFW-635)
- Windows: Fix crashes in elevated installation. (QTIFW-6656, QTIFW-659)
- OS X: Fix problems with writing settings in elevated installation (QTIFW-709)
- Fix crash on exit for Windows XP, Vista. (QTIFW-652)
- Re-add handling of zero compression level files supported by 7z.
- Improve Proxy Credentials dialog.
- Make component checker warning optional (set QT_LOGGING_RULES=ifw.componentChecker=true to enable).
- Make code ready to be compiled with Qt 5.5.
- Documentation updates.

2.0.0
- Require Qt 5.4 as a minimal version, Qt 4 code removed.
- Only support Qt 5 on documentation side as well.
- Source code is now available also under LGPLv3.
- Changed the default value of AllowSpaceInPath in config.xml to true.
- Made cycles in component dependencies fatal.
- Respect AllowSpaceInPath everywhere.
- Fixed crash while canceling the meta data unzip task.
- Fixed replacing of the maintenance tool binary.
- Introduced new classes for client-server communication.
- Replaced qscript with js engine.
- Added an example how to use dynamic pages.
- Added an example how to ask for a license agreement.
- Provided an API to get all wizard pages from java script. (QTIFW-477)
- Made the installer binary paths available for scripts.  (QTIFW-424)
- Fixed possible case of uninstalling all of Windows. (QTIFW-511)
- Stopped trying to get admin rights on Windows if impossible.
- Introduced developer tool.
- Improved checking of Installationpath and better reporting to user. (QTIFW-468, QTIFW-512)